# desktop-ai-agent

./: .env.example  .gitignore  README.md
agent/: pyproject.toml
agent/src/agent/: __init__.py  __main__.py  factory.py
agent/src/agent/core/: config.py
agent/src/agent/integrations/: __init__.py  ddg_search.py
agent/src/agent/interface/: server.py
agent/src/agent/llm/: __init__.py  backend.py  fake.py  llama_server.py  llama_server_process.py  locked.py  stream_parser.py
agent/src/agent/memory/: __init__.py  behavior.py  core.py  db.py  search.py  sessions.py
agent/src/agent/orchestrator/: __init__.py  prompt.py  session.py  turn_loop.py
agent/src/agent/scheduler/: __init__.py  cron.py  proactive.py
agent/src/agent/tools/: __init__.py  ask_user.py  base.py  memory_tools.py  registry.py  schedule_tools.py  session_tools.py  web_tools.py
agent/src/agent/voice/: __init__.py  pipeline.py  sentence_splitter.py  stt_deepgram.py  tts_voicevox.py
agent/tests/: test_factory.py  test_llama_server_backend.py  test_llama_server_live.py  test_llm.py  test_memory.py  test_orchestrator.py  test_sentence_splitter.py  test_server_integration.py  test_session_close.py  test_smoke.py  test_voice_pipeline.py  test_web_tools.py
docs/: architecture.md  directory-structure.md  run.md  setup-macos.md  setup.md  spec-detailed.md  spec.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  (+1 more)
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
(+31 files in other folders)
