[package]
name = "desktop-ai-agent"
version = "0.0.0"
description = "desktop-ai-agent Tauri shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "desktop_ai_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
